WPL-17 RED Test for OrderService [HG,RB]